[tool.poetry]
name = "poetry-dependency-management-system"
version = "0.1.0"
description = "Latihan menggunakan poetry"
authors = ["IdSundev <chefdeveloper29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
